--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -1,4 +1,3 @@
-
 html{
   font-family: 'Arial';
 }
@@ -37,4 +36,10 @@ width:300px;
 }
 input{
   max-width: 300px;
+}
+.btn-github i {
+  font-size:20px;
+  position:relative;
+  bottom:-1px;
+  margin-right:2px;
 }
